--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -6,4 +6,64 @@
     android:layout_height="match_parent"
     tools:context="com.example.user.mojprojekat.CreatePostActivity">
 
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="399dp">
+
+        <EditText
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:hint="Title" />
+
+        <EditText
+            android:id="@+id/description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/title"
+            android:hint="Description" />
+
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="250dp"
+            android:layout_height="200dp"
+            android:layout_below="@id/description"
+            android:layout_marginLeft="70dp" />
+
+        <Button
+            android:id="@+id/photo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/imageView"
+            android:layout_marginLeft="130dp"
+            android:text="chose photo"/>
+
+
+        <Button
+            android:id="@+id/createPost"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/photo"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="60dp"
+            android:text="ok" />
+
+        <Button
+            android:id="@+id/cancelPost"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/createPost"
+            android:layout_alignBottom="@+id/createPost"
+            android:layout_toEndOf="@+id/photo"
+            android:text="cancel" />
+
+    </RelativeLayout>
+
+
+
+
 </android.support.constraint.ConstraintLayout>
