--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,26 +11,26 @@
         android:layout_height="match_parent">
 
         <EditText
-            android:id="@+id/username"
+            android:id="@+id/etEmail"
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:hint="Username"/>
 
         <EditText
-            android:id="@+id/password"
+            android:id="@+id/etPassword"
             android:layout_width="250dp"
             android:layout_height="50dp"
             android:layout_alignParentStart="true"
-            android:layout_below="@id/username"
+            android:layout_below="@id/etEmail"
             android:hint="Password"/>
 
 
         <Button
+            android:id="@+id/btnLogin"
             android:layout_width="150dp"
             android:layout_height="50dp"
-            android:onClick="btnStartPostsActivity"
             android:text="Login"
-            android:layout_below="@id/password"/>
+            android:layout_below="@id/etPassword"/>
 
 
     </RelativeLayout>
