--- a/app/src/main/res/layout/activity_posts.xml
+++ b/app/src/main/res/layout/activity_posts.xml
@@ -37,6 +37,8 @@
         android:orientation="vertical" >
 
 
+
+
         <!--<RelativeLayout
             android:id="@+id/mainContent"
             android:layout_width="match_parent"
@@ -91,9 +93,11 @@
             android:id="@+id/navigation_view"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:background="#F4F4F4"
             android:layout_gravity="start"
             app:headerLayout="@layout/drawer_header"
-            app:menu="@menu/post_activity_drawer"/>
+            app:menu="@menu/post_activity_drawer"
+            app:itemBackground="@drawable/drawer_item_bg"/>
 
     </android.support.v4.widget.DrawerLayout>
 
