--- a/app/src/main/res/layout/activity_posts.xml
+++ b/app/src/main/res/layout/activity_posts.xml
@@ -96,7 +96,7 @@
             android:background="#F4F4F4"
             android:layout_gravity="start"
             app:headerLayout="@layout/drawer_header"
-            app:menu="@menu/post_activity_drawer"
+            app:menu="@menu/drawer_activity"
             app:itemBackground="@drawable/drawer_item_bg"/>
 
     </android.support.v4.widget.DrawerLayout>
