--- a/app/src/main/res/layout/activity_read_post.xml
+++ b/app/src/main/res/layout/activity_read_post.xml
@@ -73,7 +73,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             app:headerLayout="@layout/drawer_header"
-            app:menu="@menu/read_activity_drawer"/>
+            app:menu="@menu/drawer_activity"/>
 
     </android.support.v4.widget.DrawerLayout>
 
